Fix: evaluationsList not showing currentEvaluation right after created

--- a/src/assets/styles/EvaluationForm.scss
+++ b/src/assets/styles/EvaluationForm.scss
@@ -27,7 +27,7 @@
       }
     }
   }
-  .mood-extra {
+  .mood-extras {
     margin-top: 5px;
     &:first-of-type {
       margin-top: 40px;
